# NexoraCore

./: Makefile  README.md
src/apps/auth/: pyproject.toml
src/apps/calendar/: .env.example  Makefile  pyproject.toml
src/apps/calendar/app/: main.py
src/apps/calendar/app/domain/entities/: base.py  calendar.py  user.py
src/apps/calendar/app/domain/entities/events/: base.py  meeting.py  task.py
src/apps/calendar/app/domain/values/: user.py
src/apps/calendar/app/exceptions/: domain.py  infrastructure.py
src/apps/calendar/app/infrastructure/adapters/alchemy/: orm.py  type_decorators.py
src/apps/calendar/app/infrastructure/clients/: http.py
src/apps/calendar/app/infrastructure/repositories/: base.py
src/apps/calendar/app/infrastructure/services/: events.py  meetings.py  tasks.py  user.py
src/apps/calendar/app/logic/: container.py
src/apps/calendar/app/logic/commands/: calendar.py  meetings.py  tasks.py
src/apps/calendar/app/logic/events/: user.py
src/apps/calendar/app/logic/views/: events.py  meetings.py  tasks.py  user.py
src/apps/calendar/app/settings/: config.py
src/apps/calendar/app/settings/logger/: config.py
src/apps/calendar/docker/: production.yml
src/apps/task/: Makefile  pyproject.toml
src/apps/task/app/: main.py
src/apps/task/app/domain/entities/: base.py  rating.py  score.py  task.py  user.py
src/apps/task/app/domain/values/: base.py  score.py  shared.py  task.py
src/apps/task/app/exceptions/: application.py  base.py  domain.py  infrastructure.py  logic.py
src/apps/task/app/infrastructure/brokers/: base.py
src/apps/task/app/infrastructure/clients/: base.py  http.py
src/apps/task/app/infrastructure/repositories/: base.py
src/apps/task/app/infrastructure/services/: task.py
src/apps/task/app/infrastructure/uow/: base.py
src/apps/task/app/logic/: bootstrap.py  container.py
src/apps/task/app/logic/commands/: tasks.py
src/apps/task/app/logic/events/: tasks.py
src/apps/task/app/logic/handlers/: base.py
src/apps/task/app/logic/types/: handlers.py
src/apps/task/app/logic/views/: task.py
src/apps/task/app/settings/: config.py
src/apps/task/docker/: app.yml  storages.yml
src/apps/team/: .env.example  Makefile  pyproject.toml
src/apps/team/app/: main.py
src/apps/team/app/domain/entities/: base.py  team.py  team_members.py  user.py
src/apps/team/app/domain/values/: team.py  team_members.py  user.py
src/apps/team/app/exceptions/: application.py  domain.py  infrastructure.py  logic.py
src/apps/team/app/infrastructure/clients/: base.py
src/apps/team/app/infrastructure/repositories/: base.py
src/apps/team/app/infrastructure/services/: team_members.py  teams.py  user.py
src/apps/team/app/infrastructure/uow/: base.py
src/apps/team/app/logic/: bootstrap.py  container.py
src/apps/team/app/logic/commands/: team.py  team_members.py
src/apps/team/app/logic/events/: base.py  team_members.py
src/apps/team/app/logic/handlers/: base.py
src/apps/team/app/logic/views/: team_members.py  teams.py
src/apps/team/app/settings/: config.py
src/apps/team/docker/: app.yml  production.yml  storages.yml
src/apps/user/: .env.example  Makefile  pyproject.toml
src/apps/user/app/: main.py
src/apps/user/app/application/message_handlers/: broker.py  main.py
src/apps/user/app/application/utils/: admin_setup.py
src/apps/user/app/domain/entities/: address.py  base.py  bio.py  social_network.py  user.py
src/apps/user/app/domain/values/: bio.py  shared.py  social_network.py  user.py
src/apps/user/app/exceptions/: application.py  base.py  domain.py  infrastructure.py  logic.py
src/apps/user/app/infrastructure/brokers/: base.py
src/apps/user/app/infrastructure/repositories/: base.py
src/apps/user/app/infrastructure/utils/: security.py
src/apps/user/app/logic/: bootstrap.py  container.py
src/apps/user/app/logic/commands/: users.py
src/apps/user/app/logic/events/: base.py  users.py
src/apps/user/app/logic/handlers/: base.py
src/apps/user/app/logic/types/: handlers.py
src/apps/user/app/settings/: config.py
src/apps/user/docker/: app.yml  broker.yml  cache.yml  production.yml  storages.yml
src/apps/user/migrations/versions/: 2025_03_06_1002-dd5678e3ecf6_.py  2025_03_06_1009-16de6efb32d8_.py  2025_03_06_1902-7023bee3c029_init.py
(+95 files in other folders)
