[project]
name = "microservice-task"
version = "0.1.0"
description = "Microservice which related with tasks"
authors = [
    {name = "c3equalz",email = "dan.kovalev2013@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "dishka (>=1.4.2,<2.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "motor (>=3.7.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
